background on Safari fix

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -4,5 +4,7 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
+    background-color: #242424;
+
 }
 
